Button fix and text spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,7 +242,7 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 0 0 1.1em 0;
 	}
 
 		p.content {
